RESOLVED FIXED64236
REGRESSION: Button text missing in many iTunes Store pages
https://bugs.webkit.org/show_bug.cgi?id=64236
Summary REGRESSION: Button text missing in many iTunes Store pages
mitz
Reported 2011-07-09 19:53:14 PDT
Created attachment 100220 [details] Reduction Open the URL in iTunes. When it loads, the RENT and BUY buttons may be missing their labels until hovered over. The regression range I found is <http://trac.webkit.org/log/trunk/?rev=81635&stop_rev=81632>, where r81635 is the only possibly relevant change. However, a reduction (attached) reproduces the bug even in earlier versions.
Attachments
Reduction (118 bytes, text/html)
2011-07-09 19:53 PDT, mitz
no flags
For elements without a renderer, record the fact that their style is affected by :empty in their rare data (7.62 KB, patch)
2011-07-09 23:59 PDT, mitz
mjs: review+
mitz
Comment 1 2011-07-09 19:53:42 PDT
mitz
Comment 2 2011-07-09 23:59:27 PDT
Created attachment 100221 [details] For elements without a renderer, record the fact that their style is affected by :empty in their rare data
Maciej Stachowiak
Comment 3 2011-07-10 03:16:26 PDT
Comment on attachment 100221 [details] For elements without a renderer, record the fact that their style is affected by :empty in their rare data r=me
mitz
Comment 4 2011-07-10 08:38:27 PDT
Note You need to log in before you can comment on or make changes to this bug.