Source/WebCore/dom/Element.h
@@ -240,6 +240,9 @@ public:
 
     RenderStyle* computedStyle(PseudoId = NOPSEUDO);
 
+    void setStyleAffectedByEmpty();
+    bool styleAffectedByEmpty() const;
+
     AtomicString computeInheritedLanguage() const;
 
     void dispatchAttrRemovalEvent(Attribute*);
